--- a/src/components/Technologie.css
+++ b/src/components/Technologie.css
@@ -4,3 +4,9 @@
   padding: 5% 17% 0 17%;
 justify-content:space-between;
 }
+@media(max-width:600px){
+  .Technologie{
+    padding:5% 17% 0 23%;
+  }
+
+}
