--- a/src/components/TitleDivider.css
+++ b/src/components/TitleDivider.css
@@ -10,11 +10,11 @@
 
 }
 @media (max-width:600px){
-.TitleDivider{
-  padding:5% 14% 0 14%;
-}
-.TitleDivider h2{
-  font-size :4rem;
-}
+  .TitleDivider{
+    padding:5% 14% 0 14%;
+  }
+  .TitleDivider h2{
+    font-size :3rem;
+  }
 
 }
